--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </a>
         <a href="./sites/public.html" class="vid">
             <h1>Public</h1>
-            <img class="site" src="./gifs/bralessforever-rocky-marce-drive.gif">
+            <img class="site" src="./img/thumbnails/bralessforever-rocky-subway.png">
         </a>
         <a href="./sites/bellydancing.html" class="vid">
             <h1>Belly dancing</h1>
