--- a/sites/claire-grimes.html
+++ b/sites/claire-grimes.html
@@ -31,7 +31,7 @@
             <h1>Slingshot haul PPV OF</h1>
             <video controls src="../vids/Claire Grimes Slingshot haul.mp4" type="video/mp4"></video>
         </article>
-    </div>    
+    </div>
 
     <h1>Custom pics horisontal</h1>
     <div class="slideshow-container">
@@ -58,6 +58,12 @@
         </div>
         <div class="mySlides2">
             <img class="slide" src="../img/thumbnails/claire_grimes_custom_pic6.jpg">
+        </div>
+        <div class="mySlides2">
+            <img class="slide" src="../img/thumbnails/claire_grimes_custom_pic7.jpg">
+        </div>
+        <div class="mySlides2">
+            <img class="slide" src="../img/thumbnails/claire_grimes_custom_pic8.jpg">
         </div>
         <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
         <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
